chore: fixed visible overflow of chips, header spacing

--- a/components/Chips/Chips.module.scss
+++ b/components/Chips/Chips.module.scss
@@ -1,6 +1,8 @@
 .Chips {
   display: flex;
   width: 100%;
+  padding: 0 16px;
+  margin: 0 -16px;
   overflow: auto;
 
   &__item {
