--- a/components/Nav/Nav.module.scss
+++ b/components/Nav/Nav.module.scss
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 8px;
+  padding: 8px 16px;
   background: white;
   box-shadow: 0 1px 8px #aaa;
   opacity: 0.9;
@@ -42,6 +42,7 @@
 
   &__menu {
     display: flex;
+    margin-right: -8px;
 
     li a {
       padding: 12px;
